fix: remove the unusable argument type string: `ctx`, `source` and `command-source`. (command_bundle module)